k8s/transformers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transformers-service
  # namespace: ingress-nginx
spec:
  selector:
    app: transformers
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    # nodePort: 30080
  type: ClusterIP
